--- a/oauth2-client/src/main/resources/application.yml
+++ b/oauth2-client/src/main/resources/application.yml
@@ -12,6 +12,27 @@ spring:
             client-id: c7bc728955e7a5c0f431
             client-secret: 244cfc182ef1369f048d00ea15f4e99273388d69
 
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2.mem.auth
+  sql:
+    init:
+      schema-locations: classpath:sql/schema.sql
+      data-locations: classpath:sql/data.sql
+  h2:
+    console:
+      enabled: true
+      settings:
+        trace: true
+        web-allow-others: true
+      path: /h2-console
+
+#mybatis:
+#  mapper-locations: classpath:mapper/**/*.xml
+#  configuration:
+#    map-underscore-to-camel-case: true
+#  type-aliases-package: com.haole.auth.client.entity
+
 
 management:
   endpoints:
