--- a/oauth2-client/src/main/resources/application.yml
+++ b/oauth2-client/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
 
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2.mem.auth
+    url: jdbc:h2:mem:auth
   sql:
     init:
       schema-locations: classpath:sql/schema.sql
